# mintomic

./: README.md
cmake/: BuildSettings.cmake  iOS.cmake
include/mintomic/: core.h  mintomic.h  platform_detect.h
include/mintomic/private/: core_gcc.h  core_msvc.h  core_xlc.h  mintomic_gcc_arm.h  mintomic_gcc_powerpc.h  mintomic_gcc_s390.h  mintomic_gcc_sparc.h  mintomic_gcc_x86-64.h  mintomic_msvc.h  mintomic_xlc_s390.h
include/mintpack/: lwlogger.h  random.h  threadsynchronizer.h
include/mintsystem/: mutex.h  semaphore.h  thread.h  tid.h  timer.h
include/mintsystem/private/: mutex_gcc.h  semaphore_xlc.h  thread_gcc.h  tid_gcc.h  tid_msvc.h  tid_xlc.h  timer_gcc.h  timer_msvc.h  timer_xlc.h
include/mintthreads/: semaphore.h  thread.h  timer.h
include/mintthreads/private/: semaphore_gcc.h  semaphore_msvc.h  thread_gcc.h  thread_msvc.h  timer_gcc.h  timer_msvc.h
src/mintomic/: CMakeLists.txt  mintomic_gcc.c  mintomic_zos.s
src/mintpack/: CMakeLists.txt  random.cpp  threadsynchronizer.cpp
src/mintsystem/gcc/: datetime.c  mutex.c  timer.c
src/mintsystem/msvc/: thread.c  timer.c
src/mintsystem/xlc/: timer.s
src/mintthreads/: CMakeLists.txt
src/mintthreads/gcc/: semaphore.c  timer.c
src/mintthreads/msvc/: thread.c  timer.c
tests/: CMakeLists.txt  template.main.cpp  template.test_bitarray.cpp  template.test_exchange.cpp  template.test_linkedlist.cpp  template.test_return_values.cpp  template.test_storeload.cpp  zosbuild.sh
